# DTC-DE-Course

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
code/utils/: auto_build_docs.sh
code/week_1/docker/automatic_ingestion/: data_ingest.py  docker-compose.yml
code/week_1/docker/test/: pipeline.py
code/week_2/: data_ingest.py
code/week_2/01_start/: data_ingest.py
code/week_2/02_gcp_etl/: etl_web_to_gcs.py
docs/: index.md
docs/week_1/: 1-google-cloud.md  2-terraform.md  3-docker.md  4-postgres.md  5-networks.md  6-automatic-ingestion.md  7-docker-compose.md  8-google-cloud-env.md  steps.md
docs/week_2/: 1-data-lake.md  2-workflow-orchestration.md  3-etl-gcp-prefect.md  4-deployments.md  5-prefect-docker.md
docs/week_3/: 1-data-warehouse-big-query.md  2-ml-big-query.md  3-deployment-ml-big-query.md
docs/week_4/: 1-analytics-engineering-basics.md  2-dbt-basics.md  3-using-dbt.md  4-deployment.md  5-data-visualization.md
search/: search_index.json
src/dtc_de_course/utils/: auto_build_docs.sh
src/dtc_de_course/week_1/terraform/: main.tf  (+1 more)
src/dtc_de_course/week_3/: big_query_sample_queries.sql
week_1/: docker.md  steps.md
week_1/1-google-cloud/: index.html
week_1/2-terraform/: index.html
week_1/3-docker/: index.html
week_1/4-postgres/: index.html
week_1/5-networks/: index.html
week_1/6-automatic-ingestion/: index.html
week_1/7-docker-compose/: index.html
week_1/8-google-cloud-env/: index.html
week_1/docker/postgres/: data_to_postgres.ipynb
week_2/1-data-lake/: index.html
week_2/2-workflow-orchestration/: index.html
week_2/3-etl-gcp-prefect/: index.html
week_2/4-deployments/: index.html
week_2/5-prefect-docker/: index.html
week_3/1-data-warehouse-big-query/: index.html
week_3/2-ml-big-query/: index.html
week_3/3-deployment-ml-big-query/: index.html
week_4/1-analytics-engineering-basics/: index.html
week_4/2-dbt-basics/: index.html
week_4/3-using-dbt/: index.html
(+7 files in other folders)
