[tool.poetry]
name = "dtc-de-course"
version = "0.1.0"
description = ""
authors = ["Antonio <tonivalle15@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pgcli = "^3.5.0"
jupyter = "^1.0.0"
pandas = "^1.5.3"
sqlalchemy = "^2.0.1"
psycopg2-binary = "^2.9.5"
jupyterthemes = "^0.20.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
