[tool.poetry]
name = "dtc_de_course"
version = "0.1.0"
description = ""
authors = ["Antonio <tonivalle15@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pgcli = "^3.5.0"
jupyter = "^1.0.0"
pandas = "^1.5.3"
psycopg2-binary = "^2.9.5"
jupyterthemes = "^0.20.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}
pyarrow = "^11.0.0"
tqdm = "^4.64.1"
prefect = "^2.7.12"
prefect-sqlalchemy = "^0.2.2"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.2.5"}
pandas-gbq = "^0.19.1"
greenlet = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.11"
pygments = "^2.14.0"
pre-commit = "^3.0.4"
pandas-stubs = "^1.5.3.230203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
